k8s/fastify-example-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastify-example-deployment
  labels:
    app: fastify-example
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fastify-example
  template:
    metadata:
      labels:
        app: fastify-example
    spec:
      containers:
      - name: fastify-example
        image: host.minikube.internal:5000/k8s-sandbox-fastify-example
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
