k8s/nginx-example-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-example-deployment
  labels:
    app: nginx-example
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-example
  template:
    metadata:
      labels:
        app: nginx-example
    spec:
      containers:
      - name: nginx-example
        image: host.minikube.internal:5000/k8s-sandbox-nginx-example
        imagePullPolicy: Always
        ports:
        - containerPort: 80
