k8s/fastify-example-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastify-example-service
spec:
  selector:
    app: fastify-example
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
