k8s/gohttp-example-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gohttp-example-service
spec:
  selector:
    app: gohttp-example
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
