k8s/flask-example-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-example-ingress
spec:
  rules:
  - host: flask-example.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-example-service
            port:
              number: 80
