k8s/gin-example-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gin-example-ingress
spec:
  rules:
  - host: gin-example.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gin-example-service
            port:
              number: 80
